CB-29453 Perform embedded PG upgrade to 17 - Target version for embedded Postgres set to 17 - Prepare salt scripts for v17 - Refactor salt scripts to easier handling of additional Postgres versions